; ModuleID = '/home/carl/AnghaBench/openssl/crypto/conf/extr_conf_def.c_def_create.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/conf/extr_conf_def.c_def_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 (i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_3__*)* @def_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @def_create(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = call i32* @OPENSSL_malloc(i32 4)
  store i32* %4, i32** %3, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load i64 (i32*)*, i64 (i32*)** %9, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i64 %10(i32* %11)
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %7
  %15 = load i32*, i32** %3, align 8
  %16 = call i32 @OPENSSL_free(i32* %15)
  store i32* null, i32** %3, align 8
  br label %17

17:                                               ; preds = %14, %7
  br label %18

18:                                               ; preds = %17, %1
  %19 = load i32*, i32** %3, align 8
  ret i32* %19
}

declare dso_local i32* @OPENSSL_malloc(i32) #1

declare dso_local i32 @OPENSSL_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
